--- a/PiDevBackend/public/front/css/main.css
+++ b/PiDevBackend/public/front/css/main.css
@@ -23,7 +23,7 @@
   --background-color-rgb: 255, 255, 255;
   --default-color: #212529;
   --default-color-rgb: 33, 37, 41;
-  --accent-color: #e84545;
+  --accent-color: #2f39e9;
   --accent-color-rgb: 232, 69, 69;
   --heading-color: #32353a;
   --heading-color-rgb: 50, 53, 58;
@@ -34,9 +34,9 @@
 /* Nav Menu Colors */
 :root {
   --nav-color: #3a3939;
-  --nav-hover-color: #e84545;
+  --nav-hover-color: #3c22e3;
   --nav-dropdown-color: #3a3939;
-  --nav-dropdown-hover-color: #e84545;
+  --nav-dropdown-hover-color: #4c21e8;
   --nav-dropdown-background-color: #ffffff;
 }
 
@@ -145,7 +145,7 @@ h6 {
   --background-color: #ffffff;
   --heading-color: #444444;
   --nav-color: #444444;
-  --nav-hover-color: #e84545;
+  --nav-hover-color: #4a1fe6;
   box-shadow: 0 0 30px 10px rgba(0, 0, 0, 0.1);
 }
 
@@ -257,6 +257,11 @@ section {
     text-transform: none;
     color: var(--nav-dropdown-color);
   }
+  .big-square {
+    width: 200px;
+    height: 200px;
+    background-color: blue; /* You can change the color as desired */
+}
 
   .navmenu .dropdown ul a i {
     font-size: 12px;
@@ -928,16 +933,7 @@ section,
   --background-color: #f4f4f4;
 }
 
-.about .content h3 {
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 19px;
-  padding: 10px 20px;
-  background: rgba(var(--accent-color-rgb), 0.05);
-  color: var(--accent-color);
-  border-radius: 7px;
-  display: inline-block;
-}
+
 
 .about .content h2 {
   font-weight: 700;
@@ -954,7 +950,7 @@ section,
   font-weight: 500;
   font-size: 16px;
   letter-spacing: 1px;
-  padding: 12px 24px;
+  padding: 12px 60px;
   border-radius: 5px;
   transition: 0.3s;
   display: inline-flex;
