--- a/PiDevBackend/templates/basebackup.html.twig
+++ b/PiDevBackend/templates/basebackup.html.twig
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-{% block head %}
+
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -33,7 +33,6 @@
   {% endblock %}
 
 </head>
-{% endblock %}
 {% block body %}
 <body class="index-page" data-bs-spy="scroll" data-bs-target="#navmenu">
 
@@ -1129,7 +1128,7 @@
       <div class="row gy-4">
         <div class="col-lg-5 col-md-12 footer-about">
           <a href="{{ asset('base.html.twig') }}" class="logo d-flex align-items-center">
-            <span>Append</span>
+            <span>Vitalize</span>
           </a>
           <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
           <div class="social-links d-flex mt-4">
