--- a/PiDevBackend/templates/rendez_vous/rendezvous.html.twig
+++ b/PiDevBackend/templates/rendez_vous/rendezvous.html.twig
@@ -88,136 +88,59 @@
 
     </div>
   </header>{# End Header #}
-<main id="main">
+
+
+  <main id="main">
 
     {# Hero Section - Home Page #}
     <section id="hero" class="hero">
-
-   <img src="{{ asset('front/img/rendezvous/nutri.png') }}" alt="" data-aos="fade-in">
-
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-10">
-            <h2 data-aos="fade-up" data-aos-delay="100">Search here for a nutritionist doctor</h2>
-            <p data-aos="fade-up" data-aos-delay="200">We are a team of skilled doctors dedicated to improving your health and happiness.</p>
-          </div>
-          <div class="col-lg-5">
-            <form action="#" class="sign-up-form d-flex" data-aos="fade-up" data-aos-delay="300">
-              <input type="text" class="form-control" placeholder="Enter Doctor Name">
-              <input type="submit" class="btn btn-primary" value="Search">
-            </form>
-          </div>
-        </div>
-      </div>
-
-    </section>{# End Hero Section #}
-    {# About Section - Home Page #}
-    <section id="about" class="about">
-
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
-        <div class="row align-items-xl-center gy-5">
-
-
-
-<div class="col-xl-5 content">
-<div class="icon-box">
-                
-                  <h3>Doctor Oumaima Maghraoui</h3>
-                  <p>Magni repellendus vel ullam hic officia accusantium ipsa dolor omnis dolor voluptatem</p>
-                <input type="submit" class="btn btn-primary" value="Book">
-
+        <img src="{{ asset('front/img/hero-bg.jpg') }}" alt="" data-aos="fade-in">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-10">
+                    <h2 data-aos="fade-up" data-aos-delay="100">Welcome to Our Website</h2>
+                    <p data-aos="fade-up" data-aos-delay="200">We are team of talented designers making websites with Bootstrap</p>
                 </div>
-                <br>
-                <div class="icon-box">
-                
-                  <h3>Doctor Oumaima Maghraoui</h3>
-                  <p>Magni repellendus vel ullam hic officia accusantium ipsa dolor omnis dolor voluptatem</p>
-                <input type="submit" class="btn btn-primary" value="Book">
-
-                </div>
-          </div>
-
-
-          
-          <div class="col-xl-7">
-            <div class="row gy-4 icon-boxes">
-
-              <div class="col-md-6" data-aos="fade-up" data-aos-delay="200">
-                <div class="icon-box">
-                
-                  <h3>Doctor Oumaima Maghraoui</h3>
-                  <p>Magni repellendus vel ullam hic officia accusantium ipsa dolor omnis dolor voluptatem</p>
-                <input type="submit" class="btn btn-primary" value="Book">
-
-                </div>
-              </div> {# End Icon Box #}
-
-              <div class="col-md-6" data-aos="fade-up" data-aos-delay="250">
-                <div class="icon-box">
-                  <h3>Doctor Oumaima Maghraoui</h3>
-             <p>Autem saepe animi et aut aspernatur culpa facere. Rerum saepe rerum voluptates quia</p>
-                <input type="submit" class="btn btn-primary" value="Book">
-                </div>
-
-              </div> {# End Icon Box #}
-
-              <div class="col-md-6" data-aos="fade-up" data-aos-delay="300">
-                <div class="icon-box">
-            
-                  <h3>Doctor Oumaima Maghraoui</h3>
-                  <p>Omnis perferendis molestias culpa sed. Recusandae quas possimus. Quod consequatur corrupti</p>
-                 <input type="submit" class="btn btn-primary" value="Book">
-
-                </div>
-
-              </div> {# End Icon Box #}
-
-              <div class="col-md-6" data-aos="fade-up" data-aos-delay="500">
-                <div class="icon-box">
-                 
-                  <h3>Doctor Oumaima Maghraoui</h3>
-                  <p>Sint et dolor voluptas minus possimus nostrum. Reiciendis commodi eligendi omnis quideme lorenda</p>
-                 <input type="submit" class="btn btn-primary" value="Book">
-
-                </div>
-              </div> {# End Icon Box #}
-
+                <form class="sign-up-form d-flex" data-aos="fade-up" data-aos-delay="300" method="GET" action="{{ path('app_rendez_vous') }}#api_users_search_by_nom">
+                    <input type="text" class="form-control" name="name" placeholder="Enter Doctor Name">
+                    <button class="btn btn-primary" type="submit">Search</button>
+                </form>
             </div>
-          </div>
-
         </div>
-      </div>
-
-    </section>{# End About Section #}
-   <!-- Form Section -->
-    <section id="book-form" class="book-form">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-8 offset-lg-2">
-            <form action="#" method="post">
-              <!-- Form fields for name, last name, date, etc. -->
-              <div class="mb-3">
-                <label for="DocId" class="form-label">DoctorID</label>
-                <input type="text" class="form-control" id="iddoc" name="docid" readonly>
-              </div>
-              <div class="mb-3">
-                <label for="name" class="form-label">Name</label>
-                <input type="text" class="form-control" id="name" name="name" required>
-              </div>
-              <div class="mb-3">
-                <label for="last-name" class="form-label">Last Name</label>
-                <input type="text" class="form-control" id="last-name" name="last-name" required>
-              </div>
-              <div class="mb-3">
-                <label for="date" class="form-label">Date</label>
-                <input type="date" class="form-control" id="date" name="date" required>
-              </div>
-              <button type="submit" class="btn btn-primary">Confirm</button>
-            </form>
-          </div>
-        </div>
-      </div>
     </section>
+<script>
+    function scrollToSearchResults() {
+        // Scroll to the search results section
+        document.getElementById('api_users_search_by_nom').scrollIntoView({ behavior: 'smooth' });
+    }
+</script>
+    <!-- Search results -->
+    <br>
+    <section id="api_users_search_by_nom" class="container">
+        <div class="row justify-content-center">
+            {% for medecin in medecins %}
+                <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <h5 class="card-title">{{ medecin.nom }}</h5>
+                            <p class="card-text">{{ medecin.prenom }}</p>
+                            <p class="card-text">{{ medecin.tel }}</p>
+                            <p class="card-text">ID: {{ medecin.id }}</p>
+                            <a href="#" class="btn btn-primary">Book</a>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+    </section>
+
+</main>
+
+
+
+
+
+
 {% endblock body %}
 {% block footer %}
    <footer id="footer" class="footer">
@@ -293,3 +216,7 @@
 
   </footer>{# End Footer #}
 {% endblock footer %}
+{% block javascripts %}
+    <script src="{{ asset('public/front/js/main.js') }}"></script>
+{% endblock %}
+
