--- a/PiDevBackend/templates/meal/mealDetails.html.twig
+++ b/PiDevBackend/templates/meal/mealDetails.html.twig
@@ -92,9 +92,9 @@
                             <h3>Meal informations</h3>
                             <ul>
                                 <li><strong>Category</strong> {{ meal.typeRepas }}</li>
-                               <li><strong>nombre de personne</strong> </li>
-                               <li><strong>Durée de preparation </strong> </li>
-                                <li><strong>prix </strong> </li>
+                               <li><strong>nombre de personne</strong>{{ meal.nombrePersonnes }} </li>
+                               <li><strong>Durée de preparation </strong>  {{ meal.dureePreparation}}</li>
+                                <li><strong>prix </strong> {{ meal.prix}}</li>
                                 <li><a href="#" class="btn-visit align-self-start">Commander les ingrediants</a></li>
                             </ul>
                         </div>
